style.css
/* ... */
.content .button:hover {
  background: #4f8aba;
  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), inset 0 0 10px rgba(255, 255, 255, 0.1);
}
.content .button:active {
  color: #294d6b;
  background: #427aa9;
  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), inset 0 0 5px rgba(0, 0, 0, 0.2);
}
.content .button:focus {
  outline: none;
}
h1 {
  text-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
  text-align: center;
}
/*----------END TABLES ----------*/


.popup {
	width: 800px;
}

.popup p {
	padding: 0 20px;
}

/*-----------Opactiy Slider------------------*/

input[type=range] {
  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
  width: 90%; /* Specific width is required for Firefox. */
    border-radius: 10px;
    
margin: 7px auto;
}

input[type=range]:focus {
  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
}

input[type=range]::-ms-track {
  width: 100%;
  cursor: pointer;
  background: transparent; /* Hides the slider so custom styles can be added */
  border-color: transparent;
  color: transparent;
    height: 15px;
    border-radius: 10px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    border: 1px solid #ccc;
    margin: 0px;
}

/* Special styling for WebKit/Blink */
input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
/*    border: 1px solid #999;*/
  height: 16px;
  width: 16px;
  border-radius: 10px;
  background: #eee;
  cursor: pointer;
  margin-top: -2.5px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
  box-shadow: 1px 1px 1px #999, 0px 0px 3px #333; /* Add cool effects to your sliders! */
}




/* All the same stuff for Firefox */
input[type=range]::-moz-range-thumb {
  outline: none;
  height: 16px;
  width: 16px;
    border: 1px solid #999;
  border-radius: 10px;
  background: #eee;
  cursor: pointer;
  box-shadow: 1px 1px 1px #999, 0px 0px 3px #333; /* Add cool effects to your sliders! */
  cursor: pointer;
}

/* All the same stuff for IE */
input[type=range]::-ms-thumb {
  
  height: 16px;
  width: 16px;
    border: 0px;
  border-radius: 10px;
  background: #eee;
  cursor: pointer;
  box-shadow: 1px 1px 1px #999, 0px 0px 3px #333; /* Add cool effects to your sliders! */
  cursor: pointer;
}



input[type="range"]::-webkit-slider-runnable-track {
/*  background-color: #74c476; */

    background: linear-gradient(to right, #fff, #74c476 75%, #31A354);
    height: 15px;
    border-radius: 10px;
    margin-top: 5px auto;
    border: 1px solid #ccc;
    
    
}

.blue-slider input[type="range"]::-webkit-slider-runnable-track {
/*  background-color: #74c476; */

    background: linear-gradient(to right, #fff, #337ab7 75%, #23527c);
    height: 15px;
    border-radius: 10px;
    margin-top: 5px;
    border: 1px solid #ccc;
    
}


/*
input[type="range"]:focus::-webkit-slider-runnable-track {  
  background-color: #ccc;
}
*/

input[type="range"]::-moz-range-progress {
    background: linear-gradient(to right, #ccc, #74c476 75%, #31A354);
    height: 15px;
    border-radius: 10px;
    border-bottom-right-radius: 6px;
    border-top-right-radius: 6px;
    
}

input[type="range"]::-moz-range-track {  
    background-color: #ccc;
    height: 15px;
    border-radius: 10px;
    border: 1px solid #ccc;
    
}

.blue_track input[type="range"]::-moz-range-progress {
    background: linear-gradient(to right, #ccc, #337ab7 75%, #23527c);
    height: 15px;
    border-radius: 10px;
    
}



input[type="range"]::-ms-fill-lower {
    background: linear-gradient(to right, #ccc, #74c476 75%, #31A354);
    border-radius: 10px;
    
}

.blue_track input[type="range"]::-ms-fill-lower {
    background: linear-gradient(to right, #ccc, #337ab7 75%, #23527c);
    border-radius: 10px;
    
}

input[type="range"]::-ms-fill-upper {  
  background-color: #ccc;
    border-radius: 10px;
    
}


input[type=range]:focus {
  outline: none;
}
/*-----------END Opactiy Slider------------------*/

/*----------- MEDIA QUERIES -----------------*/
@media all and (max-width: 930px) {
	.social-icons {
		left: 1%;
	}
	
	.footer-nav {
		right: 1%;
	}
	
	.map-logo {
		left: 1%;
	}
	.map-nav {
		right: 1%;
	}
	
	.tree-cover-btn {
		padding:0 10px;
	}
	
	.ecosystem-btn {
		padding:0 10px;
	}
	
	.reference-btn {
		padding:0 10px;
	}
}

@media all and (max-width: 800px) {
	.footer-nav {
		font-size: 12px;
		padding-top: 12px;
	}
	
	.social-icons {
		font-size: 12px;
	}
	
	.footer-btn {
		padding: 0 10px;
	}
	.follow-us {
		display: none;
		}
	.tree-cover-btn {
		padding: 0 10px;
	}
	
	.ecosystem-btn {
		padding: 0 10px;
	}
	
	.reference-btn {
		padding: 0 10px;
	}
	
	.ecosystem-headline {
		font-size: 14px;
	}
	
	.conifer-headline {
		font-size: 14px;
	}
	
	.reference-headline {
		font-size: 14px;
	}
	
	#dataBox {
		width: 370px;
        font-size: 16px;
	}
	
	.map-tagline {
		display: none;
	}
	
	
	.map-logo {
		float: none;
		
	}
	.map-nav {
		float: none;
		top: -10px;
		left: 1%;
	}
	.grouse {
		width: 35px;
	}
	
	.popup {
	width: 575px;
}
	
}

@media all and (max-width: 725px) {
	
	
    #dataBox {
	    width: 300px;
	    font-size: 14px;
    }
    
    .conifer-headline {
	    font-size: 12px;
    }
    
    .ecosystem-headline {
	    font-size: 12px;
    }
	.reference-headline {
	    font-size: 12px;
    }
    
    .dataBox-copy {
	    display: none;
    }
    
    .data-container {
	    padding-right: 10px;
    }
    
    .tcc-header {
	    height: 30px;
	    
    }
    .eco-header {
	    height: 30px;
	    
    }
    .ref-header {
	    height: 30px;
	    
    }
    
    .header-text {
	    top: 5px;
    }
    
	.icons { 
		font-size:16px;
    }
    
    .social-icons {
	    height: 0;
	    padding-top: 8px;
    }
    
    .footer-nav {
	    bottom: 6px;
	    padding-top: 16px;
    }
    
    .download-link {
	   display: none;
}
    
    
    
 }
/* ... */

